--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: coursier/cache-action@v6
       - uses: VirtusLab/scala-cli-setup@main
+        with:
+          power: true
       - name: Start up emulators
         run: docker compose up -d 
       - name: Restore cli build
