--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         run: docker compose up -d 
       - run: sbt test
   publish:
+    runs-on: ubuntu-latest
     name: Publish Artifacts
     needs: [test]
     if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
